--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboardhosting.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboardhosting.html
@@ -46,7 +46,7 @@
                         <li>
                             <label for="txtCertificatePath">${LabelCustomCertificatePath}</label>
                             <div style="display: inline-block; width: 92%;">
-                                <input type="text" id="txtCertificatePath" required="required" />
+                                <input type="text" id="txtCertificatePath" />
                             </div>
                             <button id="btnSelectCertPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
                             <div class="fieldDescription">${LabelCustomCertificatePathHelp}</div>
