update naming project

--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -98,7 +98,10 @@
                         <input type="hidden" name="notify_url" value="http://mb3admin.com/admin/service/services/ppipn.php">
                         <input type="hidden" name="return" id="paypalReturnUrl" value="#">
 
-                        <button type="submit" data-icon="arrow-r" data-iconpos="right" data-theme="b">${ButtonDonateWithPayPal}</button>
+                        <button type="submit" data-role="none" class="btn" style="background-color:#179BD7">
+                            <i class="fa fa-paypal"></i>
+                            <span>${ButtonDonateWithPayPal}</span>
+                        </button>
 
                         <input type="hidden" id="donateAmt" name="amount" />
 
