--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -70,8 +70,9 @@
                                             <input type="hidden" id="featureId" name="item_number" value="">
                                             <input type="hidden" name="notify_url" value="http://mb3admin.com/admin/service/services/ppipn.php">
                                             <input type="hidden" name="return" id="paypalReturnUrl" value="#">
-                                            <button type="submit" id="ppButton" data-theme="b" data-icon="arrow-r" data-iconpos="right">
-                                                ${RegisterWithPayPal}
+                                            <button type="submit" id="ppButton" data-role="none" class="btn" style="background-color:#179BD7">
+                                                <i class="fa fa-paypal"></i>
+                                                <span>${RegisterWithPayPal}</span>
                                             </button>
 
                                         </div>
