duplicate password fields on admin side

--- a/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-    <div id="userPasswordPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users">
+    <div id="userPasswordPage" data-role="page" class="page type-interior userProfilesPage userPasswordPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users">
 
         <div data-role="content">
             <div class="content-primary">
@@ -16,10 +16,81 @@
                 </div>
 
                 <div class="readOnlyContent">
-                    <p>${HeaderDashboardUserPassword}</p>
-                    <p>
-                        <a data-role="button" data-icon="lock" class="lnkEditUserPreferences" href="#" target="_blank">${ButtonConfigurePassword}</a>
-                    </p>
+
+                    <div class="connectMessage readOnlyContent" style="display:none;">
+                        <p>${MessageProfileInfoSynced}</p>
+                        <div style="margin-top: .75em;"><a href="http://mediabrowser.tv/connect" target="_blank">${ButtonLearnMoreAboutMediaBrowserConnect}</a></div>
+                    </div>
+
+                    <form class="adminUpdatePasswordForm passwordSection" style="display:none;margin: 0 auto 2em;">
+
+                        <div class="detailSection">
+                            <div class="detailSectionContent">
+                                <div id="fldCurrentPassword" style="display: none;">
+                                    <label for="txtCurrentPassword">${LabelCurrentPassword}</label>
+                                    <input type="password" id="txtCurrentPassword" name="txtCurrentPassword" />
+                                    <br />
+                                </div>
+                                <div>
+                                    <label for="txtNewPassword">${LabelNewPassword}</label>
+                                    <input type="password" id="txtNewPassword" name="txtNewPassword" />
+                                </div>
+                                <br />
+                                <div>
+                                    <label for="txtNewPasswordConfirm">${LabelNewPasswordConfirm}</label>
+                                    <input type="password" id="txtNewPasswordConfirm" name="txtNewPasswordConfirm" />
+                                </div>
+                                <br />
+                                <div>
+                                    <button type="submit" data-theme="b" data-icon="check" data-mini="true">
+                                        ${ButtonSave}
+                                    </button>
+                                    <div id="btnResetPassword" style="display: none;">
+                                        <button type="button" data-icon="lock" onclick="UpdatePasswordPage.resetPassword();" data-mini="true">
+                                            ${ButtonResetPassword}
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <br />
+                    <form class="adminLocalAccessForm localAccessSection" style="margin: 0 auto;">
+                        <div class="detailSection">
+                            <div class="detailSectionHeader">
+                                ${HeaderEasyPinCode}
+                            </div>
+                            <div class="detailSectionContent">
+                                <br />
+                                <div>${EasyPasswordHelp}</div>
+                                <br />
+                                <div>
+                                    <label for="txtEasyPassword">${LabelEasyPinCode}</label>
+                                    <input type="password" id="txtEasyPassword" />
+                                </div>
+                                <br />
+                                <div>
+                                    <label for="chkEnableLocalEasyPassword">${LabelInNetworkSignInWithEasyPassword}</label>
+                                    <input type="checkbox" id="chkEnableLocalEasyPassword" />
+                                    <div class="fieldDescription">${LabelInNetworkSignInWithEasyPasswordHelp}</div>
+                                </div>
+                                <br />
+                                <div>
+                                    <button type="submit" data-theme="b" data-icon="check" data-mini="true">
+                                        ${ButtonSave}
+                                    </button>
+                                    <button id="btnResetEasyPassword" style="display:none;" type="button" data-icon="lock" onclick="UpdatePasswordPage.resetEasyPassword();" data-mini="true">
+                                        ${ButtonResetEasyPassword}
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+                    <script type="text/javascript">
+                        $('.adminUpdatePasswordForm').off('submit', UpdatePasswordPage.onSubmit).on('submit', UpdatePasswordPage.onSubmit);
+                        $('.adminLocalAccessForm').off('submit', UpdatePasswordPage.onLocalAccessSubmit).on('submit', UpdatePasswordPage.onLocalAccessSubmit);
+                    </script>
                 </div>
             </div>
         </div>
