--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvprogram.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvprogram.html
@@ -13,12 +13,12 @@
             <a href="livetvtimers.html">${TabScheduled}</a>
             <a href="livetvseriestimers.html">${TabSeries}</a>
         </div>
-        <div>
+        <div style="padding: 1em 0;">
             <div>
                 <table class="detailPageContent primaryDetailPageContent">
                     <tr>
                         <td style="vertical-align: top; padding: 0 1em 0 0;">
-                            <div id="itemImage" class="itemImageContainer"></div>
+                            <div id="itemImage" class="itemImageContainer smallDetailImageContainer"></div>
                         </td>
                         <td style="vertical-align: top; padding: 0;">
                             <p><span class="itemName inlineItemName"></span><span class="itemMiscInfo" style="display: inline;"></span></p>
