--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
@@ -18,7 +18,7 @@
                 <table class="detailPageContent primaryDetailPageContent">
                     <tr>
                         <td style="vertical-align: top; padding: 0 1em 0 0;">
-                            <div id="itemImage" class="itemImageContainer"></div>
+                            <div id="itemImage" class="itemImageContainer smallDetailImageContainer"></div>
                         </td>
                         <td style="vertical-align: top; padding: 0;">
                             <p><span class="itemName inlineItemName"></span><span class="itemMiscInfo" style="display: inline;"></span></p>
