--- a/MediaBrowser.WebDashboard/dashboard-ui/syncjob.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncjob.html
@@ -10,7 +10,7 @@
             <div class="content-primary">
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
-                    <a href="#" data-role="button" class="ui-btn-active">${TabActivity}</a>
+                    <a href="syncactivity.html" data-role="button" class="ui-btn-active">${TabActivity}</a>
                     <a href="syncsettings.html" data-role="button">${TabSettings}</a>
                 </div>
 
