--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
@@ -13,8 +13,8 @@
             <a href="livetvtimers.html">${TabScheduled}</a>
             <a href="livetvseriestimers.html">${TabSeries}</a>
         </div>
-        <div id="itemBackdrop" class="itemBackdrop noBackdrop">
-            <div class="itemBackdropContent">
+        <div style="padding: 1em 0;">
+            <div>
                 <table class="detailPageContent primaryDetailPageContent">
                     <tr>
                         <td style="vertical-align: top; padding: 0 1em 0 0;">
