--- a/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
@@ -41,14 +41,16 @@
                     </ul>
                     <fieldset id="featureAccessFields" data-role="controlgroup">
                         <legend>${HeaderFeatureAccess}</legend>
+                        <input type="checkbox" id="chkEnableContentDeletion" name="chkEnableContentDeletion" />
+                        <label for="chkEnableContentDeletion">${OptionAllowDeleteLibraryContent}</label>
+                        <input type="checkbox" id="chkEnableDownloading" />
+                        <label for="chkEnableDownloading">${OptionAllowContentDownloading}</label>
                         <input type="checkbox" id="chkEnableMediaPlayback" name="chkEnableMediaPlayback" />
                         <label for="chkEnableMediaPlayback">${OptionAllowMediaPlayback}</label>
                         <input type="checkbox" id="chkEnableLiveTvAccess" name="chkEnableLiveTvAccess" />
                         <label for="chkEnableLiveTvAccess">${OptionAllowBrowsingLiveTv}</label>
                         <input type="checkbox" id="chkManageLiveTv" name="chkManageLiveTv" />
                         <label for="chkManageLiveTv">${OptionAllowManageLiveTv}</label>
-                        <input type="checkbox" id="chkEnableContentDeletion" name="chkEnableContentDeletion" />
-                        <label for="chkEnableContentDeletion">${OptionAllowDeleteLibraryContent}</label>
                         <input type="checkbox" id="chkEnableSync" />
                         <label for="chkEnableSync">${OptionAllowSyncContent}</label>
                     </fieldset>
