--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -141,7 +141,7 @@
                         <div class="detailButtonsContainer desktopDetailButtons" style="text-align: left;">
                             <button class="btnPlay hide" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonPlay}</button>
                             <a class="btnSync hide" data-role="button" data-icon="cloud" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
-                            <button class="btnMoreCommands hide" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true">${ButtonMore}</button>
+                            <button class="btnMoreCommands hide jqmButtonNoText" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true" data-iconpos="notext">${ButtonMore}</button>
                         </div>
                     </td>
                 </tr>
@@ -150,7 +150,7 @@
         <div class="detailButtonsContainer mobileDetailButtons">
             <button class="btnPlay hide" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonPlay}</button>
             <a class="btnSync hide" data-role="button" data-icon="cloud" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
-            <button class="btnMoreCommands hide" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true">${ButtonMore}</button>
+            <button class="btnMoreCommands hide jqmButtonNoText" type="button" data-icon="ellipsis-v" data-inline="true" data-mini="true" data-iconpos="notext">${ButtonMore}</button>
         </div>
         <p class="itemOverview mobileOverview"></p>
         <div data-role="content" style="padding-top: 0;">
