Change donate email

--- a/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporter.html
@@ -91,7 +91,7 @@
                         <br />
 
                         <input type="hidden" name="cmd" id="ppCmd" value="_xclick">
-                        <input type="hidden" name="business" value="donate@mediabrowser3.com">
+                        <input type="hidden" name="business" value="donation@mediabrowser.tv">
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="hidden" name="item_name" value="Media Browser Supporter">
                         <input type="hidden" name="item_number" id="ppItemNo" value="MBSupporter">
