update dlna profiles

--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -141,7 +141,7 @@
                             <a href="http://mediabrowser.tv" target="_blank">Media Browser</a>
                             <a href="http://mediabrowser.tv/community" target="_blank">${LinkCommunity}</a>
                             <a href="https://github.com/MediaBrowser" target="_blank">${LinkGithub}</a>
-                            <a href="../swagger-ui/index.html" target="_blank">${LinkApi}</a>
+                            <a class="swaggerLink" target="_blank" href="#">${LinkApi}</a>
                         </div>
                     </div>
                 </div>
