--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -277,7 +277,7 @@
                         <div class="splitVersionContainer" style="border-bottom: 1px solid #444;">
                             <button type="button" class="btnSplitVersions" data-mini="true" data-inline="true" data-icon="delete" title="${ButtonSplitVersionsApart}">${ButtonSplitVersionsApart}</button>
                         </div>
-                        <div id="mediaInfoContent"></div>
+                        <div id="mediaInfoContent" class="mediaInfoContent"></div>
                     </div>
                 </div>
             </div>
