--- a/MediaBrowser.WebDashboard/dashboard-ui/scheduledtask.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/scheduledtask.html
@@ -22,7 +22,7 @@
         </div>
         <div data-role="popup" id="popupAddTrigger" class="popup" style="min-width: 300px;">
             <form class="addTriggerForm">
-                <div class="ui-bar-b" style="text-align: center; padding: 0 20px;">
+                <div class="ui-bar-a" style="text-align: center; padding: 0 20px;">
                     <h3>${HeaderAddScheduledTaskTrigger}</h3>
                 </div>
                 <div data-role="content">
