added an allow mode filter for tags

--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -4,8 +4,8 @@
     <title>${TitleSignIn}</title>
 </head>
 <body class="serverlessPage">
-    <div class="backdropContainer" style="background-image:url(css/images/splash.png);top:0;"></div>
-    <div id="connectLoginPage" data-role="page" class="page standalonePage connectLoginPage lightBackdropPage backdropPage staticBackdropPage" data-theme="b" style="background-color: rgba(20, 20,20, .75)!important;">
+    <div class="backdropContainer" style="background-image:url(css/images/splash.jpg);top:0;"></div>
+    <div id="connectLoginPage" data-role="page" class="page standalonePage connectLoginPage lightBackdropPage backdropPage staticBackdropPage" data-theme="b" style="background-color: rgba(0, 0,0, .9)!important;">
 
         <div data-role="content">
 
