revise opt-in tags

--- a/MediaBrowser.WebDashboard/dashboard-ui/userparentalcontrol.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userparentalcontrol.html
@@ -32,10 +32,21 @@
 
                     <div>
                         <div>
-                            <div class="ui-controlgroup-label" style="display:inline-block;">${LabelBlockOrAllowItemsWithTags}</div>
-                            <button type="button" class="btnAddTag" data-inline="true" data-mini="true" data-iconpos="notext" data-icon="plus" style="vertical-align:middle;margin: -5px 0 0 1em;">${ButtonAdd}</button>
+                            <div class="ui-controlgroup-label" style="display:inline-block;">${LabelBlockContentWithTags}</div>
+                            <button type="button" class="btnAddBlockedTag" data-inline="true" data-mini="true" data-iconpos="notext" data-icon="plus" style="vertical-align:middle;margin: -5px 0 0 1em;">${ButtonAdd}</button>
                         </div>
-                        <div class="tagFilters" style="margin-top:.5em;">
+                        <div class="blockedTags" style="margin-top:.5em;">
+
+                        </div>
+                    </div>
+                    <br />
+
+                    <div>
+                        <div>
+                            <div class="ui-controlgroup-label" style="display:inline-block;">${LabelAllowContentWithTags}</div>
+                            <button type="button" class="btnAddAllowedTag" data-inline="true" data-mini="true" data-iconpos="notext" data-icon="plus" style="vertical-align:middle;margin: -5px 0 0 1em;">${ButtonAdd}</button>
+                        </div>
+                        <div class="allowedTags" style="margin-top:.5em;">
 
                         </div>
                     </div>
@@ -66,7 +77,7 @@
 
                 </form>
 
-                <div data-role="popup" id="popupTag" class="popup" data-theme="a">
+                <div data-role="popup" id="popupBlockedTag" class="popup" data-theme="a">
 
                     <div class="ui-bar-a" style="text-align: center; padding: 5px 20px;">
                         <h3 style="margin: .5em;">${HeaderAddTag}</h3>
@@ -74,19 +85,38 @@
 
                     <div style="padding:10px 5px 0;">
 
-                        <form class="tagForm" style="min-width:210px;">
+                        <form class="blockedTagForm" style="min-width:210px;">
 
                             <ul data-role="listview" class="ulForm" style="margin-bottom:10px!important;">
                                 <li>
-                                    <label for="txtTag">${LabelTag}</label>
-                                    <input id="txtTag" type="text" required="required" />
+                                    <label for="txtBlockedTag">${LabelTag}</label>
+                                    <input id="txtBlockedTag" type="text" required="required" />
                                 </li>
                                 <li>
-                                    <label for="selectTagMode">${LabelTagFilterMode}</label>
-                                    <select id="selectTagMode" data-mini="true">
-                                        <option value="Block">${OptionBlockItemWithTag}</option>
-                                        <option value="Allow">${OptionAllowItemWithTag}</option>
-                                    </select>
+                                    <button type="submit" data-icon="plus" data-theme="b" data-mini="true">${ButtonAdd}</button>
+                                    <button type="button" data-icon="delete" data-mini="true" onclick="$(this).parents('.popup').popup('close');">${ButtonCancel}</button>
+                                </li>
+                            </ul>
+                        </form>
+
+                    </div>
+
+                </div>
+
+                <div data-role="popup" id="popupAllowedTag" class="popup" data-theme="a">
+
+                    <div class="ui-bar-a" style="text-align: center; padding: 5px 20px;">
+                        <h3 style="margin: .5em;">${HeaderAddTag}</h3>
+                    </div>
+
+                    <div style="padding:10px 5px 0;">
+
+                        <form class="allowedTagForm" style="min-width:210px;">
+
+                            <ul data-role="listview" class="ulForm" style="margin-bottom:10px!important;">
+                                <li>
+                                    <label for="txtAllowedTag">${LabelTag}</label>
+                                    <input id="txtAllowedTag" type="text" required="required" />
                                     <div class="fieldDescription allowModeHelp">${LabelTagFilterAllowModeHelp}</div>
                                 </li>
                                 <li>
@@ -148,7 +178,8 @@
             </div>
         </div>
         <script type="text/javascript">
-            $('.tagForm').off('submit', UserParentalControlPage.onTagFormSubmit).on('submit', UserParentalControlPage.onTagFormSubmit);
+            $('.blockedTagForm').off('submit', UserParentalControlPage.onBlockedTagFormSubmit).on('submit', UserParentalControlPage.onBlockedTagFormSubmit);
+            $('.allowedTagForm').off('submit', UserParentalControlPage.onAllowedTagFormSubmit).on('submit', UserParentalControlPage.onAllowedTagFormSubmit);
             $('.scheduleForm').off('submit', UserParentalControlPage.onScheduleFormSubmit).on('submit', UserParentalControlPage.onScheduleFormSubmit);
             $('.userParentalControlForm').off('submit', UserParentalControlPage.onSubmit).on('submit', UserParentalControlPage.onSubmit);
         </script>
