--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboardgeneral.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboardgeneral.html
@@ -66,7 +66,7 @@
                                 </li>
                                 <li>
                                     <label for="txtCustomCss">${LabelCustomCss}</label>
-                                    <textarea id="txtCustomCss" style="font-family:monospace;height:200px!important;"></textarea>
+                                    <textarea id="txtCustomCss" style="font-family:monospace;height:200px!important;overflow-y:auto;"></textarea>
                                     <div class="fieldDescription">${LabelCustomCssHelp}</div>
                                 </li>
                             </ul>
