stub out process throttle

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div data-role="popup" id="popupUpload" data-theme="a" data-corners="false">
+        <div data-role="popup" id="popupUpload" data-theme="a">
             <form id="uploadItemImageForm" style="max-width: 100%; margin: 0 1.5em 1.5em;">
                 <h2>${HeaderAddUpdateImage}</h2>
                 <div>
@@ -98,8 +98,8 @@
         <div data-role="popup" class="popup popupDownload" data-theme="a">
 
             <a href="#" data-rel="back" data-role="button" data-icon="delete" data-iconpos="notext" class="ui-btn-right" data-theme="b">${ButtonClose}</a>
-            <div class="ui-bar-b" style="text-align: center; padding: 0 20px;">
-                <h3 style="margin: .5em 0;">${HeaderBrowseOnlineImages}</h3>
+            <div class="ui-bar-a" style="text-align: center; padding: 0 20px;">
+                <h3>${HeaderBrowseOnlineImages}</h3>
             </div>
 
             <div data-role="content">
