--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -454,7 +454,7 @@
         <div data-role="popup" id="popupEditPerson" class="popup" data-theme="a">
 
             <div class="ui-bar-a" style="text-align: center; padding: 0 20px;">
-                <h3 style="margin: .5em;">${HeaderPersonInfo}</h3>
+                <h3>${HeaderPersonInfo}</h3>
             </div>
 
             <div data-role="content">
@@ -501,7 +501,7 @@
         <div data-role="popup" class="popup popupAdvancedRefresh" data-theme="a">
 
             <div class="ui-bar-a" style="text-align: center; padding: 0 20px;">
-                <h3 style="margin: .5em;">${HeaderRefreshMetadata}</h3>
+                <h3>${HeaderRefreshMetadata}</h3>
             </div>
 
             <div data-role="content">
